ptbr translation: changed Linguagem to Idioma
it's more apropried

--- a/locale/pt-br.json
+++ b/locale/pt-br.json
@@ -65,7 +65,7 @@
                 "dialogs.settings.main.appearence.fonts.title-font": "Fonte em títulos"
             },
             "LANGUAGE": {
-                "dialogs.settings.main.language": "Linguagem",
+                "dialogs.settings.main.language": "Idioma",
                 "dialogs.settings.main.translating": "Ajude a traduzir o Cohesion"
             },
             "SUGGESTIONS": {
